# MediaPlayerV2

./: CMakeLists.txt  Main.qml  bluetoothmanager.cpp  bluetoothmanager.h  main.cpp  mediaplayer.cpp  mediaplayer.h  playlistmodel.cpp  playlistmodel.h  sensorsmanager.cpp  sensorsmanager.h
QMLModules/: BluetoothPanel.qml  CMakeLists.txt  PlaylistView.qml  SensorsPanel.qml  VolumeControl.qml  qmldir
